--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,22 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.left-align {
+  display: flex;
+  gap: 16px;
+}
+
+.right-align {
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  gap: 16px;
 }
 
 .profile-image {
@@ -34,7 +50,7 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
-  padding: 8px 24px;
+  padding: 8px, 24px;
 }
 
 a {
@@ -45,4 +61,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0px;
+  gap: 16px;
+  margin-left: 0px;
 }
